Fixed stats comoponent styling in desktop and mobile, whole site now renders properly on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,10 +27,10 @@ a {
 }
 
 .calendar {
-  margin-top: 250px;
+  padding: 100px;
   margin-left: 100px;
   float: right;
-
+  position: absolute;
 }
 
 .centered {
@@ -39,6 +39,7 @@ a {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .centered2 {
@@ -228,6 +229,8 @@ li a {
 .overflow {
   overflow: scroll;
   height: 700px;
+  width: auto;
+  position: relative;
 }
 
 .btn-outline-primary {
@@ -320,10 +323,15 @@ li a {
   justify-content: center;
   color: purple;
   font-weight: bold;
-  padding: 30px 30px;
   float: left;
-  margin-left: 10%;
+  z-index: 9000;
   position: relative;
+  text-align: center;
+  height: auto;
+  margin-left: 400px;
+  margin-right: 400px;
+  width: xx;
+  min-width: 400px;
 }
 
 .statListDate {
@@ -355,10 +363,4 @@ li a {
   float: left;
   margin-top: 10px;
   margin-left: 10px;
-}
-
-@media only screen and (max-width: 600px) {
-  phone {
-    zoom: 10%;
-  }
 }
